# ask-abu-dhabi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TEST_QUESTIONS.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
core/: __init__.py  analytics.py  config.py  exceptions.py  intent.py  kb_loader.py  knowledge_base.py  orchestrator.py  prompts.py  schema.py
data/: baseline_knowledge_base.json
etl/: __init__.py  extractors.py  firecrawl_client.py  pipeline.py  run.py  sources.py  transformers.py  validators.py
ml/: __init__.py  intent_classifier.py
providers/: __init__.py  base.py  factory.py  gemini.py  openrouter.py  retry.py
scripts/: deploy.sh  refresh_kb.sh  run.sh  setup.sh  test.sh
tests/: __init__.py  conftest.py  test_api.py  test_etl_extractors.py  test_etl_pipeline.py  test_etl_validators.py  test_intent.py  test_kb_loader.py  test_orchestrator.py  test_prompts.py  test_providers.py  test_retry.py
tests/fixtures/firecrawl_responses/: corrupted.json  louvre_noisy.json  louvre_valid.json  zayed_mosque_valid.json
