[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-abu-dhabi"
version = "0.1.0"
description = "Multilingual (EN/AR) AI tourism assistant for Abu Dhabi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ask Abu Dhabi" }]
dependencies = [
    "streamlit>=1.36,<2.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "requests>=2.32,<3.0",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5,<2.0"]
test = ["pytest>=8.2,<9.0", "pytest-mock>=3.14,<4.0", "httpx>=0.27,<1.0"]

[tool.setuptools]
packages = ["core", "providers", "ml", "etl"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
